SearchScedule added instead of 3 others
